toggle btn new html

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #98900a; }
+  background: #6cf7d1; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #fa1023; }
+  background: #5285e7; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #329016; }
+  background: #3d6b56; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #7135a3; }
+  background: #7a5260; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a4dcfa; }
+  background: #e8b336; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #6d1697; }
+  background: #f5a3cd; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #8a667b; }
+  background: #812b54; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a8bc43; }
+  background: #4b4ff5; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #2158b3; }
+  background: #2176a5; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #12c283; }
+  background: #786ec5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #bac26a; }
+  background: #04de26; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #3bce79; }
+  background: #5c1e17; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #56d241; }
+  background: #a8e9a7; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #f77f86; }
+  background: #4ffde3; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #a0cb7f; }
+  background: #e01745; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #7eb51a; }
+  background: #b0391f; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #ee5bd7; }
+  background: #5b9481; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #a9f25e; }
+  background: #8bbb6a; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #e5bcba; }
+  background: #7a0af9; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #8b1b28; }
+  background: #b79afd; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #194ef9; }
+  background: #499b62; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #8fd225; }
+  background: #9f2130; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #bc04e4; }
+  background: #9b38f0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f2d44b; }
+  background: #5cebf8; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #c6859b; }
+  background: #746e6f; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c4aada; }
+  background: #f11932; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #1a2d39; }
+  background: #7ba8ca; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #df0990; }
+  background: #e46161; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #aeb01c; }
+  background: #33e5a5; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a8c2b3; }
+  background: #fe592d; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #49a280; }
+  background: #481588; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #3f2ad6; }
+  background: #e54706; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #ed0fee; }
+  background: #5ee2d6; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #df15a9; }
+  background: #9d6366; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #6af8fa; }
+  background: #e0b94c; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #417aae; }
+  background: #55a384; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #fbfc38; }
+  background: #afd6a3; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #6ac2b4; }
+  background: #e6211e; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #c3ca7d; }
+  background: #51783d; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #65fef6; }
+  background: #06fe26; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #b0cc61; }
+  background: #d1e233; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #973c4e; }
+  background: #a2dc39; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #fdbb6e; }
+  background: #2240ad; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c02518; }
+  background: #94e382; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #da7785; }
+  background: #8e6738; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #da3f33; }
+  background: #a3f4a2; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #2bd0f5; }
+  background: #0a12d5; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e5e4c3; }
+  background: #6f2cce; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #799ffd; }
+  background: #a9373d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #8ab2d7; }
+  background: #6b504c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #0f6c03; }
+  background: #16e613; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #06de30; }
+  background: #d38e8b; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #6d31f6; }
+  background: #242dd3; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3f5d68; }
+  background: #9cbbf1; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #283f85; }
+  background: #bb1cac; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #8043df; }
+  background: #e67ba3; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #f02070; }
+  background: #0ae26e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #1dd624; }
+  background: #ca3c3d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #b1b0fc; }
+  background: #c42b59; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #27faf6; }
+  background: #0f8620; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #d022cd; }
+  background: #c96dd2; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #ce3174; }
+  background: #75983b; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #eaa8a8; }
+  background: #4dfbd7; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f93ac6; }
+  background: #a0c34a; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c4b166; }
+  background: #dbde34; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #7385b2; }
+  background: #9d711f; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #a93d35; }
+  background: #3ade55; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8255b6; }
+  background: #ab9bee; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #d80ef1; }
+  background: #2247e0; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #3d0c35; }
+  background: #a106ef; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #be3bae; }
+  background: #3d1b95; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #92042e; }
+  background: #618413; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #6db7a9; }
+  background: #8b2e74; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #5f61a7; }
+  background: #1652d4; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #0516ee; }
+  background: #3788ef; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #a70517; }
+  background: #41c623; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #41be10; }
+  background: #38e1ff; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #72340a; }
+  background: #a826c3; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #cbd566; }
+  background: #2d3789; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #16ac94; }
+  background: #a04825; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #f3aaa8; }
+  background: #e968d8; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #2dd574; }
+  background: #035f46; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #af6b70; }
+  background: #50089d; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #368f4a; }
+  background: #88180d; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #aaffd4; }
+  background: #11e38d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #41842d; }
+  background: #d94fb7; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #763a5e; }
+  background: #de2dab; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #21c003; }
+  background: #980ede; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #8a6e73; }
+  background: #509557; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #303c6d; }
+  background: #0a7b82; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #bf49c7; }
+  background: #b642be; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #3283e3; }
+  background: #0851e5; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #9c57cd; }
+  background: #91d759; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #8f9ce2; }
+  background: #a2a037; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #cef0d5; }
+  background: #79d41f; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #d30f2f; }
+  background: #182663; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a903d0; }
+  background: #918d52; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #702f03; }
+  background: #8132b7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #905ac4; }
+  background: #26db7a; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #44ee58; }
+  background: #fa7094; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10769,6 +10769,112 @@ input[type="checkbox"] {
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .ps {
     overflow: auto !important; } }
+.onoffbtn {
+  width: 80px;
+  height: 30px;
+  border-radius: 15px;
+  background: #bbbbbb none repeat scroll 0 0;
+  display: block;
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 20px; }
+
+.onoffbtn:after {
+  position: absolute;
+  height: 28px;
+  width: 28px;
+  display: block;
+  border-radius: 50%;
+  background: #fff;
+  top: 1px;
+  left: 1px;
+  content: 'Off';
+  -webkit-transition: all 200ms ease-in-out;
+  -moz-transition: all 200ms ease-in-out;
+  -o-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
+  text-align: center;
+  line-height: 29px;
+  color: black;
+  font-size: 13px; }
+
+.onoffbtn.active:after {
+  left: 100%;
+  margin-left: -29px;
+  background: #fff;
+  content: 'OR';
+  color: black;
+  font-size: 15px; }
+
+.onoffbtn input[type="checkbox"] {
+  opacity: 0;
+  cursor: pointer; }
+
+.onoffswitch-inner:after {
+  content: "";
+  padding-right: 10px;
+  background-color: #bbbbbb;
+  color: #999999;
+  text-align: right;
+  border-radius: 0 19px 19px 0; }
+
+.onoffswitch-switch {
+  width: 19px;
+  margin: 0px;
+  background: #FFFFFF;
+  border: 1px solid #999999;
+  border-radius: 19px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 20px;
+  -moz-transition: all 0.3s ease-in 0s;
+  -webkit-transition: all 0.3s ease-in 0s;
+  -o-transition: all 0.3s ease-in 0s;
+  transition: all 0.3s ease-in 0s;
+  background-image: -moz-linear-gradient(center top, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 80%);
+  background-image: -webkit-linear-gradient(center top, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 80%);
+  background-image: -o-linear-gradient(center top, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 80%);
+  background-image: linear-gradient(center top, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 80%);
+  box-shadow: 0 1px 1px white inset; }
+
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+  margin-left: 0; }
+
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+  right: 0px; }
+
+.btn-switch-box {
+  -moz-transition: all 0.3s ease-in 0s;
+  -webkit-transition: all 0.3s ease-in 0s;
+  -o-transition: all 0.3s ease-in 0s;
+  transition: all 0.3s ease-in 0s; }
+  .btn-switch-box span {
+    color: white;
+    position: absolute;
+    right: 10px;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    margin: auto;
+    align-items: center; }
+
+.btn-switch-box.active {
+  background-color: #2e337e;
+  -moz-transition: all 0.3s ease-in 0s;
+  -webkit-transition: all 0.3s ease-in 0s;
+  -o-transition: all 0.3s ease-in 0s;
+  transition: all 0.3s ease-in 0s; }
+  .btn-switch-box.active span {
+    color: white;
+    position: absolute;
+    left: 10px;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    margin: auto;
+    align-items: center; }
+
 .block {
   display: block; }
 
@@ -11484,6 +11590,9 @@ input:checked + .sliders:before {
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img-select img {
     width: 30px !important; }
 
+.m-top {
+  margin-top: 25px; }
+
 .query-wizard-exp-contents .query-wizard-expension {
   display: flex !important;
   justify-content: space-between !important;
@@ -11502,10 +11611,10 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn::after {
       content: "";
       width: 0;
-      height: 50px;
+      height: 46px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -57px;
+      top: -52px;
       left: 38px; }
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn a {
       color: #000000;
@@ -11528,7 +11637,7 @@ input:checked + .sliders:before {
       z-index: 4; }
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter .disabled-input {
       background: #776fff;
-      border: 1px solid #776fff;
+      border: 2px solid #776fff;
       padding: 8px 10px;
       font-size: 12px;
       color: #fff;
@@ -11541,10 +11650,10 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter::after {
       content: "";
       width: 0;
-      height: 54px;
+      height: 43px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -33px;
+      top: -28px;
       left: 41px; }
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter div {
       z-index: 2; }
@@ -11614,6 +11723,8 @@ input:checked + .sliders:before {
     border: 1px solid #776fff;
     top: 0px;
     left: 50%; }
+  .and-or-div .switch-btn {
+    width: 76px; }
   .and-or-div .query-toggle-btn-div {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -11643,7 +11754,8 @@ input:checked + .sliders:before {
   text-decoration: none; }
 
 .list-ic li {
-  position: relative; }
+  position: relative;
+  line-height: 11px; }
 
 .list-ic li span {
   position: relative; }
@@ -11788,6 +11900,81 @@ input:checked + .sliders:before {
 
 .policy-btns-wrapper button {
   margin-left: 15px; }
+
+/*AND OR BTN CSS NEW*/
+.switch-btn {
+  position: relative;
+  display: inline-block;
+  width: 82px;
+  height: 31px;
+  margin-bottom: 0rem !important; }
+
+.switch-btn input {
+  display: none; }
+
+.sliderss {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #776fff;
+  -webkit-transition: 0.4s;
+  transition: 0.4s; }
+
+.sliderss:before {
+  position: absolute;
+  content: "";
+  height: 23px;
+  width: 24px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s; }
+
+input:checked + .sliderss {
+  background-color: #776fff; }
+
+input:focus + .sliderss {
+  box-shadow: 0 0 1px #776fff; }
+
+input:checked + .sliderss:before {
+  -webkit-transform: translateX(44px);
+  -ms-transform: translateX(44px);
+  transform: translateX(44px); }
+
+/*------ ADDED CSS ---------*/
+.on {
+  display: none; }
+
+.on,
+.off {
+  color: white;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 60%;
+  font-size: 14px;
+  font-family: Verdana, sans-serif; }
+
+input:checked + .sliderss .on {
+  display: block;
+  font-size: 14px;
+  padding-left: 10px;
+  left: 30%; }
+
+input:checked + .sliderss .off {
+  display: none; }
+
+/*--------- END --------*/
+/* Rounded sliders */
+.sliderss.round {
+  border-radius: 34px; }
+
+.sliderss.round:before {
+  border-radius: 50%; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
