wizard model changes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #6cf7d1; }
+  background: #d5dab0; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #5285e7; }
+  background: #ed17c8; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #3d6b56; }
+  background: #b9d01d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #7a5260; }
+  background: #a696b0; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #e8b336; }
+  background: #6f542b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f5a3cd; }
+  background: #33462a; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #812b54; }
+  background: #e552cf; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #4b4ff5; }
+  background: #2331d9; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #2176a5; }
+  background: #707d16; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #786ec5; }
+  background: #fdaa69; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #04de26; }
+  background: #ac4f2c; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #5c1e17; }
+  background: #518e83; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #a8e9a7; }
+  background: #468cf6; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #4ffde3; }
+  background: #5e1c6e; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #e01745; }
+  background: #1c7247; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #b0391f; }
+  background: #79f212; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5b9481; }
+  background: #347637; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #8bbb6a; }
+  background: #fc0647; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #7a0af9; }
+  background: #5e6c55; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b79afd; }
+  background: #b5eecd; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #499b62; }
+  background: #3bfee2; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #9f2130; }
+  background: #4b48fa; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #9b38f0; }
+  background: #160207; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #5cebf8; }
+  background: #584241; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #746e6f; }
+  background: #6d435e; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f11932; }
+  background: #f14262; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #7ba8ca; }
+  background: #37ec0e; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #e46161; }
+  background: #b302ac; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #33e5a5; }
+  background: #d216f3; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #fe592d; }
+  background: #653fef; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #481588; }
+  background: #7c8ae3; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #e54706; }
+  background: #11bc3e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #5ee2d6; }
+  background: #9e76b7; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #9d6366; }
+  background: #87c2f6; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e0b94c; }
+  background: #5001ff; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #55a384; }
+  background: #2fa7f3; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #afd6a3; }
+  background: #fabee1; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e6211e; }
+  background: #6c8b82; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #51783d; }
+  background: #26227a; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #06fe26; }
+  background: #6dc71a; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d1e233; }
+  background: #713839; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #a2dc39; }
+  background: #380bd7; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #2240ad; }
+  background: #2424c8; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #94e382; }
+  background: #66ff04; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #8e6738; }
+  background: #9f2797; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a3f4a2; }
+  background: #61f851; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #0a12d5; }
+  background: #5a2862; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #6f2cce; }
+  background: #f08004; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a9373d; }
+  background: #2ee4e0; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #6b504c; }
+  background: #ee643d; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #16e613; }
+  background: #e97c54; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d38e8b; }
+  background: #f602a6; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #242dd3; }
+  background: #a85973; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #9cbbf1; }
+  background: #7f5034; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #bb1cac; }
+  background: #0fb878; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e67ba3; }
+  background: #135bbc; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #0ae26e; }
+  background: #ded48f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ca3c3d; }
+  background: #e118d8; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c42b59; }
+  background: #164382; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #0f8620; }
+  background: #f0614b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #c96dd2; }
+  background: #0bcc6e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #75983b; }
+  background: #a5f3b3; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #4dfbd7; }
+  background: #9a2794; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #a0c34a; }
+  background: #2663f8; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #dbde34; }
+  background: #aa9efe; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #9d711f; }
+  background: #8d6a14; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #3ade55; }
+  background: #54f59e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #ab9bee; }
+  background: #8bd295; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #2247e0; }
+  background: #a404a1; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #a106ef; }
+  background: #8cc932; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #3d1b95; }
+  background: #76aef0; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #618413; }
+  background: #3b43ea; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #8b2e74; }
+  background: #aee521; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #1652d4; }
+  background: #feb79e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #3788ef; }
+  background: #8cf7b5; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #41c623; }
+  background: #0a971e; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #38e1ff; }
+  background: #795116; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a826c3; }
+  background: #1c5f34; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #2d3789; }
+  background: #1f175c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #a04825; }
+  background: #44a28b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #e968d8; }
+  background: #23bb6d; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #035f46; }
+  background: #658474; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #50089d; }
+  background: #b768b2; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #88180d; }
+  background: #f4bc99; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #11e38d; }
+  background: #085657; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #d94fb7; }
+  background: #89e38d; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #de2dab; }
+  background: #e9c488; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #980ede; }
+  background: #5cdc16; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #509557; }
+  background: #e795d7; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #0a7b82; }
+  background: #b2d9de; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b642be; }
+  background: #58685a; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #0851e5; }
+  background: #da48c5; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #91d759; }
+  background: #f2d193; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #a2a037; }
+  background: #a6ce51; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #79d41f; }
+  background: #704463; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #182663; }
+  background: #55e409; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #918d52; }
+  background: #bd22d0; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8132b7; }
+  background: #0212c3; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #26db7a; }
+  background: #d38b65; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #fa7094; }
+  background: #647dcc; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11590,9 +11590,6 @@ input:checked + .sliders:before {
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img-select img {
     width: 30px !important; }
 
-.m-top {
-  margin-top: 25px; }
-
 .query-wizard-exp-contents .query-wizard-expension {
   display: flex !important;
   justify-content: space-between !important;
@@ -11611,7 +11608,7 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn::after {
       content: "";
       width: 0;
-      height: 46px;
+      height: 45px;
       position: absolute;
       border: 1px solid #776fff;
       top: -52px;
@@ -11727,7 +11724,7 @@ input:checked + .sliders:before {
     width: 76px; }
   .and-or-div .query-toggle-btn-div {
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 28px;
     z-index: 2; }
 
 .v-line-div .v-line-space {
